[metadata]
name = nwpipeline
version = attr: nwpipeline.pipeline.__version__
author = Kit Beyer
author_email = kitbeyer@gmail.com
description = NiMBaLWear wearable device data processing pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nimbal/nwpipeline
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = nwpipeline
python_requires = >=3.9
install_requires =
    pandas~=1.4.0
    tqdm~=4.62.3
    isodate~=0.6.1
    nwdata@git+https://github.com/nimbal/nwdata@v0.9.0#egg=nwdata
    nwnonwear@git+https://github.com/nimbal/nwnonwear@v0.2.0#egg=nwnonwear
    nwsleep@git+https://github.com/nimbal/nwsleep@v0.3.1#egg=nwsleep
    nwgait@git+https://github.com/nimbal/nwgait@v0.4.1#egg=nwgait
    nwactivity@git+https://github.com/nimbal/nwactivity@v0.3.0#egg=nwactivity




