[metadata]
name = nimbalwear
version = attr: nimbalwear.__version__
author = Kit Beyer
author_email = kitbeyer@gmail.com
description = NiMBaLWear wearable device data processing pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nimbal/nimbalwear
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = nimbalwear
python_requires = >=3.9
include_package_data = True
install_requires =
    pandas~=1.4.0
    tqdm~=4.62.3
    isodate~=0.6.1
    nwnonwear@git+https://github.com/nimbal/nwnonwear@v0.2.0#egg=nwnonwear
    nwsleep@git+https://github.com/nimbal/nwsleep@v0.3.2#egg=nwsleep
    nwgait@git+https://github.com/nimbal/nwgait@v0.4.2#egg=nwgait




