[metadata]
name = nimbalwear
version = attr: nimbalwear.__version__.__version__
author = Kit Beyer
author_email = kitbeyer@gmail.com
description = NiMBaLWear wearable device data processing pipeline.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nimbal/nimbalwear
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    nimbalwear
    nimbalwear.files
    nimbalwear.reports
    nimbalwear.utils
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy >= 1.22.4, < 2.0.0
    numba >= 0.59.0
    pandas >= 1.4.0
    matplotlib >= 3.5.2
    tqdm >= 4.64.0
    isodate >= 0.6.1
    scipy >= 1.7.3
    pyedflib >= 0.1.34
    flatten-dict >= 0.4.2
    scikit-learn >= 1.1.1
    fpdf >= 1.7.2
    toml >= 0.10.2
    msoffcrypto-tool >= 5.0.0
    nimbaldetach >= 1.0.3
    openpyxl




